--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -468,3 +468,7 @@ margin: 0 auto !important;
   background-color: #5e7d66;
   border: #5e7d66;
 }
+
+.color-textu-felgulator{
+  text-align: center;
+}
