--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2,7 +2,7 @@
 /*---- Main style ----*/
 /*------------------------------*/
 :root {
-  --link-color: #ff6600;
+  --link-color: #ffc107;
   --light-link-color: #61a470;
   --background-color: #457550;
   --lighter-background-color: #375d40;
